--- a/server/public/style.css
+++ b/server/public/style.css
@@ -26,6 +26,7 @@ img {
     width: 100%;
 }
 
+/*header*/
 header {
     padding: 2rem 0;
 }
@@ -36,6 +37,10 @@ header {
     flex-wrap: wrap;
 }
 
+.logo {
+    cursor: default;
+}
+
 .logo h1, .logo i {
     font-family: Creepster;
     color: transparent;
@@ -43,6 +48,8 @@ header {
     background-clip: text;
     letter-spacing: 2px;
     background-color: #000;
+}
+.logo:hover h1, .logo:hover i {
     background-image: url(images/lightning.gif);
     background-position: center;
     background-size: cover;
@@ -55,6 +62,10 @@ header {
 .header-cart {
     display: inline-block;
     cursor: pointer;
+}
+
+.header-cart:hover {
+    color: #B24B52;
 }
 
 .header-cart i {
@@ -70,6 +81,7 @@ header {
     margin-bottom: 2rem;
 }
 
+/*product catalog page*/
 .prod-list {
     display: flex;
     flex-wrap: wrap;
@@ -105,6 +117,7 @@ header {
     color: gray;
 }
 
+/*product detail page*/
 .prod-detail {
     display: flex;
     flex-wrap: wrap;
@@ -126,4 +139,13 @@ header {
 
 .prod-detail-desc {
     margin-top: 2rem;
+}
+
+/*cart*/
+.cart-item {
+    display: flex;
+    flex-wrap: wrap;
+}
+.cart-item-img {
+    max-width:200px;
 }
