--- a/server/public/style.css
+++ b/server/public/style.css
@@ -24,24 +24,27 @@
     margin-bottom: 2rem;
 }
 
-.form-input input {
+.form-input input, .form-input textarea {
     position: relative;
-    z-index: 2;
     padding: .5rem;
     width: 100%;
     max-width: 300px;
 }
 
-.form-input input + label {
+.form-input input + label, .form-input textarea + label {
     position: absolute;
-    top: 1px;
-    left: 0;
-    z-index: 1;
+    top: 50%;
+    left: 10px;
+    transform:translateY(-50%);
     transition: all .25s;
 }
 
-.form-input input:focus + label {
-    transform: translateY(-100%);
+.form-input input + label.label-show, .form-input textarea + label.label-show {
+    top: -10px;
+}
+
+.form-input input:focus + label, .form-input textarea:focus + label {
+    top: -10px;
 }
 
 body {
