--- a/server/public/style.css
+++ b/server/public/style.css
@@ -42,7 +42,7 @@ img {
     text-align: center;
     max-width: 150px;
     cursor: pointer;
-    transition: background .25s;
+    transition: background-color .25s;
 }
 
 .btn:hover {
@@ -88,6 +88,75 @@ img {
 
 .form-input input:focus + label, .form-input textarea:focus + label {
     top: -10px;
+}
+
+.error-msg {
+    color: red;
+    margin-top: .5rem;
+    font-size: .9rem;
+}
+
+/*cart quantity*/
+.cart-quantity {
+    margin-right: 1px;
+}
+.cart-quantity input {
+    padding: .5rem;
+    display: inline-block;
+    max-width: 65px;
+}
+
+/*accordion*/
+.accordion {
+    width: 100%;
+    max-width: 600px;
+}
+.accordion-btn {
+    background-color: #434343;
+    color: #FFF;
+    padding: .5rem 1rem;
+    cursor: pointer;
+    transition: background-color .25s;
+    position: relative;
+    margin-bottom: 2px;
+}
+.accordion-btn:before {
+    content: "▾";
+    font-size: 2rem;
+    position: absolute;
+    top: 55%;
+    right: 15px;
+    transform: translateY(-50%);
+    transition: transform .3s, right .3s;
+}
+.accordion-btn.active:before {
+    right: 20px;
+    transform: translateY(-50%) rotate(60deg);
+}
+.accordion-btn:hover {
+    background-color: #5E5D5A;
+}
+.accordion-item {
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+    transition: all .3s;
+}
+
+.accordion-item.active{
+    padding: 1rem;
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+}
+.accordion-item ul {
+    padding-left: 1rem;
+    margin-top: .5rem;
+}
+
+.accordion-size-guide td{
+    text-align: center;
+    padding: .2rem 0;
 }
 
 /*header*/
@@ -188,7 +257,7 @@ footer {
     top: 50%;
     transform: translateY(-50%);
     padding: 2rem 1.5rem;
-    border: 1px solid;
+    border: 2px solid;
     background-color: rgba(0,0,0,.7);
 }
 .banner-inner > *:not(:last-child) {
@@ -227,19 +296,14 @@ footer {
 
 .prod-card-img {
     overflow: hidden;
-    background-color: #CBC9C5;
 }
 
 .prod-card .prod-card-img img {
     transition: all .5s;
 }
 
-.prod-card:hover .prod-card-img img {
-    transform: scale(1.2);
-}
-
 .prod-card-name {
-    font-size: 1.25rem;
+    font-size: 1.1rem;
     font-weight: bold;
 }
 
@@ -328,7 +392,11 @@ footer {
 
 .cart-item-price {
     text-align: right;
-    width: 30%;
+    width: 20%;
+}
+.cart-item-total {
+    text-align: right;
+    width: 10%;
 }
 
 .cart-checkout {
