--- a/server/public/style.css
+++ b/server/public/style.css
@@ -349,7 +349,14 @@ footer {
 }
 
 /*cart*/
-
+.empty-cart {
+    text-align: center;
+}
+.empty-cart img {
+    max-width: 300px;
+    margin: auto;
+    display: block;
+}
 .cart-summary h1 {
     margin-bottom: 1rem;
 }
@@ -428,10 +435,8 @@ footer {
 }
 .checkout-content h5 {
     text-transform: uppercase;
+    margin-bottom: 1rem;
     text-decoration: underline;
-}
-.checkout-form h5 {
-    margin-bottom: 2rem;
 }
 .checkout-total {
     margin: 2rem 0;
@@ -499,5 +504,14 @@ footer {
 @media screen and (max-width: 425px) {
     .prod-card-container {
         width: 100%;
+    }
+    .cart-item {
+        font-size: .9rem;
+    }
+    .cart-item-desc {
+        width: 30%;
+    }
+    .cart-item-total {
+        width: 18%;
     }
 }
