--- a/server/public/style.css
+++ b/server/public/style.css
@@ -68,9 +68,10 @@ img {
     position: relative;
     padding: .75rem;
     width: 100%;
-    max-width: 355px;
+    max-width: 400px;
     font-family: 'Josefin Sans', sans-serif;
-    border: 1px solid #5E5D5A;
+    border: 1px solid #CCC;
+    border-radius: 5px;
 }
 
 .form-input input + label, .form-input textarea + label {
@@ -430,7 +431,16 @@ footer {
     color: #B24B52;
 }
 
+.cart-checkout-summary .cart-item {
+    border: 1px solid #CCC;
+}
+
 /*checkout page*/
+.checkout-page h1 {
+    border-bottom: 1px solid #5E5D5A;
+    padding-bottom: .5rem;
+    margin-bottom: 1rem;
+}
 .checkout-content {
     display: flex;
     flex-wrap: wrap;
@@ -441,15 +451,33 @@ footer {
     width: 50%;
     padding: 1rem;
 }
-.checkout-content h5 {
+.checkout-content h4 {
     text-transform: uppercase;
-    margin-bottom: 1rem;
-    text-decoration: underline;
+    margin-bottom: 2rem;
 }
 .checkout-total {
     margin: 2rem 0;
 }
-
+.checkout-summary {
+    max-width: 600px;
+    margin: 1rem auto;
+    display: block;
+    text-align: center;
+}
+.checkout-summary h2 {
+    background-color: #353535;
+    color: #FFF;
+    padding: 1rem;
+    text-transform: uppercase;
+}
+.checkout-info {
+    border: 1px solid #353535;
+    padding: 1rem;
+}
+.checkout-info p {
+    margin-bottom: 2rem;
+    line-height: 1.5;
+}
 
 /*media queries*/
 @media screen and (max-width: 1000px) {
